# Pig_Dice_Project

./: 2PGame.cpp  2PGame.h  CMakeLists.txt  Die.cpp  Die.h  Game.cpp  Game.h  Pig Dice functions.cpp  Pig_Dice_4_Core.cpp  Pig_Dice_5_Core.cpp  README.md  Turn.cpp  Turn.h  main.cpp  twoPGame.cpp  twoPGame.h
